--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,12 @@ jobs:
       - name: Run Maven and capture output
         id: capture_output
         working-directory: ./shop
-        run: OUTPUT="$(mvn -B clean install 2>&1)" && echo "$OUTPUT" && echo "✅✅✅ MAVEN BUILD DONE. CAPTURE COMPLETED ✅✅✅" && TRUNCATED_OUTPUT="$(echo "$OUTPUT" | tail -n 20 | sed 's/`/\\`/g')" && echo "BUILD_OUTPUT<<EOF" >> $GITHUB_ENV && echo "$TRUNCATED_OUTPUT" >> $GITHUB_ENV && echo "EOF" >> $GITHUB_ENV
+        run: |
+          mvn -B clean install 2>&1 | tee full_output.txt
+          echo "✅✅✅ MAVEN BUILD DONE. CAPTURE COMPLETED ✅✅✅"
+          echo "BUILD_OUTPUT<<EOF" >> $GITHUB_ENV
+          tail -n 20 full_output.txt | sed 's/`/\\`/g' >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Send Telegram Message on Success
         if: ${{ success() }}
