--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,24 +42,30 @@ jobs:
           cd shop
           mvn clean test -Dsurefire.printSummary=true -Dsurefire.useFile=false | tee mvn_output.log
 
-      - name: Check for mvn_output.log file
-        id: check_log
+      - name: Extract Product Details section
+        id: extract_section
         run: |
-          if [ -f ./shop/mvn_output.log ]; then
-            echo "log_exists=true" >> $GITHUB_OUTPUT
-            tail -n 20 ./shop/mvn_output.log > ./shop/last_20.log
+          if grep -q "Product Details:" ./shop/mvn_output.log; then
+            sed -n '/Product Details:/,/^\[INFO\] Tests run:/p' ./shop/mvn_output.log \
+              | sed '$d' > ./shop/product_details.log
+            echo "section_exists=true" >> $GITHUB_OUTPUT
           else
-            echo "log_exists=false" >> $GITHUB_OUTPUT
+            echo "section_exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Send test result to Telegram (only if log exists)
-        if: steps.check_log.outputs.log_exists == 'true'
+      - name: Send Product Details to Telegram
+        if: steps.extract_section.outputs.section_exists == 'true'
         run: |
-          MESSAGE="📦 *Test Results from GitHub Actions*\n\n📝 Last 20 lines:\n\`\`\`\n$(cat ./shop/last_20.log)\n\`\`\`"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id=${TELEGRAM_CHAT_ID} \
-            --data-urlencode text="$MESSAGE" \
-            -d parse_mode="Markdown"
+          MAX_LEN=4000
+          CONTENT=$(cat ./shop/product_details.log)
+          while [ ${#CONTENT} -gt 0 ]; do
+            PART="${CONTENT:0:$MAX_LEN}"
+            curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+              -d chat_id=${TELEGRAM_CHAT_ID} \
+              --data-urlencode text="$PART" \
+              -d parse_mode="Markdown"
+            CONTENT="${CONTENT:$MAX_LEN}"
+          done
 
       - name: Send custom Telegram message (manual trigger)
         if: github.event_name == 'workflow_dispatch' && github.event.inputs.custom_message != ''
