--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,8 @@
 name: Notify Telegram Test Results
 
 on:
+  schedule:
+    - cron: "0 8,10,12,14,16,18,20,21 * * *"
   push:
     branches:
       - main
