--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Notify Telegram Test Results
+name: Notify Telegram Test Results (Docker)
 
 on:
   schedule:
@@ -25,29 +25,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '21'
+      - name: Build Docker image
+        run: docker build -t selenium-tests .
 
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-
-      - name: Build and run tests
+      - name: Run tests inside Docker and save output
         run: |
-          cd shop
-          mvn clean test -Dsurefire.printSummary=true -Dsurefire.useFile=false | tee mvn_output.log
+          docker run --rm selenium-tests | tee mvn_output.log
 
       - name: Extract each Product Details section
         id: extract_sections
         run: |
-          cd shop
           rm -f product_details_*.log
           COUNT=0
           # Loop through each "Product Details:" occurrence
@@ -64,7 +51,6 @@ jobs:
       - name: Send Product Details to Telegram
         if: steps.extract_sections.outputs.count != '0'
         run: |
-          cd shop
           MAX_LEN=4000
           for FILE in product_details_*.log; do
             CONTENT=$(cat "$FILE")
