--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build Docker image
-        run: docker build -t selenium-tests .
+        run: docker build -t selenium-tests -f /shop/Dockerfile.
 
       - name: Run tests inside Docker and save output
         run: |
