dsghfgsfaDDZDVXV XBZVDz cbfxfawd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,11 @@ jobs:
 
       - name: Run tests inside Docker and save mvn_output.log
         run: |
+          mkdir -p ./shop
           docker run --rm \
-            -v ${{ github.workspace }}/shop \
+            -v ${{ github.workspace }}/shop:/workspace/shop \
             selenium-tests \
-            sh -c "cd /shop && mvn clean test -Dsurefire.printSummary=true -Dsurefire.useFile=false | tee mvn_output.log" || true
+            sh -c "cd /workspace/shop && mvn clean test -Dsurefire.printSummary=true -Dsurefire.useFile=false | tee mvn_output.log" || true
 
       - name: Extract Product Details section
         id: extract_section
