--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,20 +47,6 @@ jobs:
             echo "section_exists=false" >> $GITHUB_OUTPUT
           fi
 
-      # - name: Send Product Details to Telegram
-      #   if: steps.extract_section.outputs.section_exists == 'true'
-      #   run: |
-      #     MAX_LEN=4000
-      #     CONTENT=$(cat ./shop/product_details.log)
-      #     while [ ${#CONTENT} -gt 0 ]; do
-      #       PART="${CONTENT:0:$MAX_LEN}"
-      #       curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-      #         -d chat_id=${TELEGRAM_CHAT_ID} \
-      #         --data-urlencode text="$PART" \
-      #         -d parse_mode="Markdown"
-      #       CONTENT="${CONTENT:$MAX_LEN}"
-      #     done
-
       - name: Send Product Details to Telegram
         if: steps.extract_section.outputs.section_exists == 'true'
         run: |
@@ -68,12 +54,10 @@ jobs:
           CONTENT=$(cat ./shop/product_details.log)
           while [ ${#CONTENT} -gt 0 ]; do
             PART="${CONTENT:0:$MAX_LEN}"
-            RESPONSE=$(curl -s -w "\nHTTP_STATUS:%{http_code}" -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
               -d chat_id=${TELEGRAM_CHAT_ID} \
               --data-urlencode text="$PART" \
-              -d parse_mode="Markdown")
-            echo "Curl response:"
-            echo "$RESPONSE"
+              -d parse_mode="Markdown"
             CONTENT="${CONTENT:$MAX_LEN}"
           done
     
