--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           docker run --rm \
             -v ${{ github.workspace }}/shop:/workspace/shop \
             selenium-tests \
-            sh -c "cd /workspace/shop && mvn clean test -Dsurefire.printSummary=true -Dsurefire.useFile=false | tee mvn_output.log" || true
+            sh -c "cd /workspace/shop && mvn clean test -Dstyle.color=never -Dsurefire.printSummary=true -Dsurefire.useFile=false | tee mvn_output.log" || true
 
       - name: Extract Product Details section
         id: extract_section
