--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,30 @@ jobs:
             echo "section_exists=false" >> $GITHUB_OUTPUT
           fi
 
+      # Download previous logs (if any)
+      - name: Download previous product_details.log
+        uses: actions/download-artifact@v4
+        with:
+          name: product-details-log
+          path: ./shop/previous
+        continue-on-error: true
+
+      - name: Compare logs
+        id: compare
+        run: |
+          if [ -f ./shop/previous/product_details.log ]; then
+            if diff -q ./shop/product_details.log ./shop/previous/product_details.log > /dev/null; then
+              echo "changed=false" >> $GITHUB_OUTPUT
+            else
+              echo "changed=true" >> $GITHUB_OUTPUT
+            fi
+          else
+            # First run, always considered as "changed"
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Send Product Details to Telegram
-        if: steps.extract_section.outputs.section_exists == 'true'
+        if: steps.extract_section.outputs.section_exists == 'true' && steps.compare.outputs.changed == 'true'
         run: |
           MAX_LEN=4000
           CONTENT=$(cat ./shop/product_details.log)
@@ -57,10 +79,19 @@ jobs:
             PART="${CONTENT:0:$MAX_LEN}"
             curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
               -d chat_id=${TELEGRAM_CHAT_ID} \
-              --data-urlencode text="$PART" \
+              --data-urlencode text="$PART"
             CONTENT="${CONTENT:$MAX_LEN}"
           done
-    
+
+      # Save current log as artifact for the next run
+      - name: Upload product_details.log for next run
+        if: steps.extract_section.outputs.section_exists == 'true'
+        uses: actions/upload-artifact@v4
+        with:
+          name: product-details-log
+          path: ./shop/product_details.log
+          retention-days: 3
+
       - name: Compile and run Telegram notifier
         if: always()
         run: |
@@ -73,4 +104,4 @@ jobs:
         run: |
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id=${TELEGRAM_CHAT_ID} \
-            --data-urlencode text="${{ github.event.inputs.custom_message }}" \
+            --data-urlencode text="${{ github.event.inputs.custom_message }}"
